--- a/index.html
+++ b/index.html
@@ -15,13 +15,20 @@
         function showDetail(detailType) {
             const labDetails = {
                 1: {
-                    'Опис предметного середовища': 'Онлайн-автосалон — це платформа для покупки та продажу автомобілів. Користувачі можуть переглядати і фільтрувати автомобілі, створювати та управляти оголошеннями, шукати авто за різними критеріями, зв’язуватися з продавцями і переглядати деталі автомобілів. Продавці мають можливість додавати нові оголошення, редагувати їх та управляти ними. Адміністратори можуть модерати оголошення, управляти користувачами та переглядати аналітику. Платформа також підтримує платіжні системи для можливого платного просування оголошень і забезпечує безпеку транзакцій.',
-                    'Тема Мета Місце розташування': 'Тема: СТРУКТУРА HTML-ДОКУМЕНТА. ВИБІР ПРЕДМЕТНОЇ ГАЛУЗІ.РОБОТА З ПОСИЛАННЯМИ, ТАБЛИЦЯМИ, ЗОБРАЖЕННЯМИ, СПИСКАМИ в HTML-ДОКУМЕНТІ.<br/>Мета: придбати практичні навички роботи з HTML-документом, таблицями, , зображеннями, посиланнями, списками, формамиСтворити шаблон звітного HTML-документом для відображення результатів роботи всіх лабораторних робіт.',
-                    'СТРУКТУРА ДОКУМЕНТА': '!DOCTYPE html: Вказує тип документа (HTML5).<br/> html lang="uk": Встановлює мову сторінки як українську.<br/>head: Метаінформація (кодування, заголовок, підключення стилів).<br/>body: Основний вміст:<br/>header: Логотип.<br/>main:<br/>Привітання, опис автосалону.<br/>Таблиця популярних авто.<br/>Переваги компанії.<br/>Форма для звязку.<br/>footer: Підвал з копірайтом і посиланням.',
-                    'HTML-код ТАБЛИЦІ': '<img src="img/table_code.png" alt="HTML-код таблиці" style="position: absolute; top: 74%; left: 33%"><img src="img/table.png">',
-                    'HTML-код ФОРМИ': '<img src="img/form_code.png" alt="HTML-код форми" style="position: absolute; top: 90%; left: 34%"><img src="img/form.png">',
-                    'HTML-код ЗОБРАЖЕННЯ': '<img src="img/photo_code.png" alt="HTML-код зображення" style="position: absolute; top: 65%; left: 33%"><img src="img/photo.png" alt="HTML-код зображення">',
-                    'ВИСНОВКИ': 'У ході виконання лабораторної роботи були досягнуті ключові цілі: розвинено практичні навички роботи з HTML-документами, включаючи створення і редагування основних елементів, таких як заголовки, абзаци, списки і таблиці. Опановано вставку зображень і налаштування їх відображення, управління розмірами і розташуванням. Розглянуто додавання гіперпосилань для навігації, створення форм для збору даних від користувачів, а також організацію інформації за допомогою маркованих і нумерованих списків. В результаті створено шаблон звітного HTML-документа для відображення результатів усіх лабораторних завдань, що дозволяє структуровано і зрозуміло презентувати отримані дані. Робота допомогла закріпити знання HTML та здобути навички, які будуть корисні для розробки і підтримки веб-додатків.'
+                'Опис предметного середовища': 'Онлайн-автосалон — це веб-платформа, яка забезпечує інтерактивний простір для купівлі та продажу автомобілів. Користувачі мають можливість переглядати автомобілі, використовуючи різноманітні фільтри для пошуку за характеристиками, такими як марка, модель, ціна, рік випуску та інші параметри. Кожне оголошення містить детальну інформацію про автомобіль, а також дозволяє користувачам звязуватися з продавцями напряму через платформу.<br\><br\>Продавці можуть створювати нові оголошення, вказуючи повну інформацію про автомобіль, завантажувати фотографії, редагувати наявні оголошення та керувати ними через особистий кабінет. Для зручності адміністраторів платформа надає інструменти для модерації оголошень, керування користувачами та перегляду статистики і аналітики.',
+                'Тема Мета Місце розташування': `Тема: СТРУКТУРА HTML-ДОКУМЕНТА. ВИБІР ПРЕДМЕТНОЇ ГАЛУЗІ.РОБОТА З ПОСИЛАННЯМИ, ТАБЛИЦЯМИ, ЗОБРАЖЕННЯМИ, СПИСКАМИ в HTML-ДОКУМЕНТІ.<br/>
+                Мета: придбати практичні навички роботи з HTML-документом, таблицями, зображеннями, посиланнями, списками, формами. Створити шаблон звітного HTML-документа для відображення результатів роботи всіх лабораторних робіт.<br/>
+                1. <a href="https://github.com/t1m0feevka/lab_reports" target="_blank">Звітний html-документ</a><br/>
+                2. <a href="https://t1m0feevka.github.io/lab_reports/" target="_blank">Жива сторінка html-документа</a><br/>
+                3. <a href="https://github.com/t1m0feevka/dilership" target="_blank">Посилання на WEB-застосунок</a><br/>
+                4. <a href="https://t1m0feevka.github.io/dilership/" target="_blank">Жива сторінка WEB-застосунку</a><br/>
+                5. <a href="https://github.com/t1m0feevka/independed_projects" target="_blank">Самостіна робота</a><br/>
+                6. <a href="https://t1m0feevka.github.io/independed_projects/" target="_blank">Жива сторінка самостійної роботи</a>`,
+                'СТРУКТУРА ДОКУМЕНТА': '!DOCTYPE html: Вказує тип документа (HTML5).<br/> html lang="uk": Встановлює мову сторінки як українську.<br/>head: Метаінформація (кодування, заголовок, підключення стилів).<br/>body: Основний вміст:<br/>header: Логотип.<br/>main:<br/>Привітання, опис автосалону.<br/>Таблиця популярних авто.<br/>Переваги компанії.<br/>Форма для звязку.<br/>footer: Підвал з копірайтом і посиланням.',
+                'HTML-код ТАБЛИЦІ': '<img src="table_code.png" alt="HTML-код таблиці" style="position: absolute; top: 74%; left: 33%"><img src="table.png">',
+                'HTML-код ФОРМИ': '<img src="form_code.png" alt="HTML-код форми" style="position: absolute; top: 90%; left: 34%"><img src="form.png">',
+                'HTML-код ЗОБРАЖЕННЯ': '<img src="photo_code.png" alt="HTML-код зображення" style="position: absolute; top: 65%; left: 33%"><img src="photo.png" alt="HTML-код зображення">',
+                'ВИСНОВКИ': 'У ході виконання лабораторної роботи були досягнуті ключові цілі: розвинено практичні навички роботи з HTML-документами, включаючи створення і редагування основних елементів, таких як заголовки, абзаци, списки і таблиці. Опановано вставку зображень і налаштування їх відображення, управління розмірами і розташуванням. Розглянуто додавання гіперпосилань для навігації, створення форм для збору даних від користувачів, а також організацію інформації за допомогою маркованих і нумерованих списків. В результаті створено шаблон звітного HTML-документа для відображення результатів усіх лабораторних завдань, що дозволяє структуровано і зрозуміло презентувати отримані дані. Робота допомогла закріпити знання HTML та здобути навички, які будуть корисні для розробки і підтримки веб-додатків.'
                 },
             };
 
@@ -38,11 +45,10 @@
 
         <div class="student-section">
             <div class="group-info">
-                <p>Студента групи ІС-33</p>
-                <p>Степанчука Тимофія Вадимовича</p>
+                <p>Студента групи ІС-33 Степанчука Тимофія Вадимовича</p>
             </div>
             <div class="photo-container">
-                <img src="img/student_photo.jpg" alt="Фото студента" class="student-photo">
+                <img src="student_photo.jpg" alt="Фото студента" class="student-photo">
             </div>
         </div>
 
