--- a/index.html
+++ b/index.html
@@ -12,40 +12,59 @@
             currentLab = labNumber;
             toggleButtons(labNumber); 
         }
-        
+
         function toggleButtons(labNumber) {
             const buttonsSection1 = document.getElementById('buttons-lab1');
             const buttonsSection2 = document.getElementById('buttons-lab2');
+            const buttonsSection3 = document.getElementById('buttons-lab3');
 
-            if (labNumber === 2) {
-                buttonsSection1.style.display = 'none'; 
-                buttonsSection2.style.display = 'block'; 
-            } else {
+            if (labNumber === 1) {
                 buttonsSection1.style.display = 'block'; 
                 buttonsSection2.style.display = 'none';  
+                buttonsSection3.style.display = 'none'; 
+            } else if (labNumber === 2) {
+                buttonsSection1.style.display = 'none'; 
+                buttonsSection2.style.display = 'block'; 
+                buttonsSection3.style.display = 'none'; 
+            } else if (labNumber === 3) {
+                buttonsSection1.style.display = 'none'; 
+                buttonsSection2.style.display = 'none';  
+                buttonsSection3.style.display = 'block'; 
             }
         }
 
         function showDetail(detailType) {
             const labDetails = {
                 1: {
-                'Опис предметного середовища': 'Онлайн-автосалон — це веб-платформа, яка забезпечує інтерактивний простір для купівлі та продажу автомобілів. Користувачі мають можливість переглядати автомобілі, використовуючи різноманітні фільтри для пошуку за характеристиками, такими як марка, модель, ціна, рік випуску та інші параметри. Кожне оголошення містить детальну інформацію про автомобіль, а також дозволяє користувачам звязуватися з продавцями напряму через платформу.<br\><br\>Продавці можуть створювати нові оголошення, вказуючи повну інформацію про автомобіль, завантажувати фотографії, редагувати наявні оголошення та керувати ними через особистий кабінет. Для зручності адміністраторів платформа надає інструменти для модерації оголошень, керування користувачами та перегляду статистики і аналітики.',
-                'Тема Мета Місце розташування': 'Тема: СТРУКТУРА HTML-ДОКУМЕНТА. ВИБІР ПРЕДМЕТНОЇ ГАЛУЗІ.РОБОТА З ПОСИЛАННЯМИ, ТАБЛИЦЯМИ, ЗОБРАЖЕННЯМИ, СПИСКАМИ в HTML-ДОКУМЕНТІ.<br/>Мета: придбати практичні навички роботи з HTML-документом, таблицями, зображеннями, посиланнями, списками, формами. Створити шаблон звітного HTML-документа для відображення результатів роботи всіх лабораторних робіт.<br/>1. <a href="https://github.com/t1m0feevka/lab_reports" target="_blank">Звітний html-документ</a><br/>2. <a href="https://t1m0feevka.github.io/lab_reports/" target="_blank">Жива сторінка html-документа</a><br/>3. <a href="https://github.com/t1m0feevka/dilership" target="_blank">Посилання на WEB-застосунок</a><br/>4. <a href="https://t1m0feevka.github.io/dilership/" target="_blank">Жива сторінка WEB-застосунку</a><br/>5. <a href="https://github.com/t1m0feevka/independed_projects" target="_blank">Самостіна робота</a><br/>6. <a href="https://t1m0feevka.github.io/independed_projects/" target="_blank">Жива сторінка самостійної роботи</a>',
-                'СТРУКТУРА ДОКУМЕНТА': '!DOCTYPE html: Вказує тип документа (HTML5).<br/> html lang="uk": Встановлює мову сторінки як українську.<br/>head: Метаінформація (кодування, заголовок, підключення стилів).<br/>body: Основний вміст:<br/>header: Логотип.<br/>main:<br/>Привітання, опис автосалону.<br/>Таблиця популярних авто.<br/>Переваги компанії.<br/>Форма для звязку.<br/>footer: Підвал з копірайтом і посиланням.',
-                'HTML-код ТАБЛИЦІ': '<img src="img/table_code.png" alt="HTML-код таблиці" style="position: absolute; top: 74%; left: 33%"><img src="img/table.png">',
-                'HTML-код ФОРМИ': '<img src="img/form_code.png" alt="HTML-код форми" style="position: absolute; top: 90%; left: 34%"><img src="img/form.png">',
-                'HTML-код ЗОБРАЖЕННЯ': '<img src="img/photo_code.png" alt="HTML-код зображення" style="position: absolute; top: 65%; left: 33%"><img src="img/photo.png" alt="HTML-код зображення">',
-                'ВИСНОВКИ': 'У ході виконання лабораторної роботи були досягнуті ключові цілі: розвинено практичні навички роботи з HTML-документами, включаючи створення і редагування основних елементів, таких як заголовки, абзаци, списки і таблиці. Опановано вставку зображень і налаштування їх відображення, управління розмірами і розташуванням. Розглянуто додавання гіперпосилань для навігації, створення форм для збору даних від користувачів, а також організацію інформації за допомогою маркованих і нумерованих списків. В результаті створено шаблон звітного HTML-документа для відображення результатів усіх лабораторних завдань, що дозволяє структуровано і зрозуміло презентувати отримані дані. Робота допомогла закріпити знання HTML та здобути навички, які будуть корисні для розробки і підтримки веб-додатків.'
+                    'Опис предметного середовища': 'Онлайн-автосалон — це веб-платформа, яка забезпечує інтерактивний простір для купівлі та продажу автомобілів. Користувачі мають можливість переглядати автомобілі, використовуючи різноманітні фільтри для пошуку за характеристиками, такими як марка, модель, ціна, рік випуску та інші параметри. Кожне оголошення містить детальну інформацію про автомобіль, а також дозволяє користувачам звязуватися з продавцями напряму через платформу.<br\><br\>Продавці можуть створювати нові оголошення, вказуючи повну інформацію про автомобіль, завантажувати фотографії, редагувати наявні оголошення та керувати ними через особистий кабінет. Для зручності адміністраторів платформа надає інструменти для модерації оголошень, керування користувачами та перегляду статистики і аналітики.',
+                    'Тема Мета Місце розташування': 'Тема: СТРУКТУРА HTML-ДОКУМЕНТА. ВИБІР ПРЕДМЕТНОЇ ГАЛУЗІ.РОБОТА З ПОСИЛАННЯМИ, ТАБЛИЦЯМИ, ЗОБРАЖЕННЯМИ, СПИСКАМИ в HTML-ДОКУМЕНТІ.<br/>Мета: придбати практичні навички роботи з HTML-документом, таблицями, зображеннями, посиланнями, списками, формами. Створити шаблон звітного HTML-документа для відображення результатів роботи всіх лабораторних робіт.<br/>1. <a href="https://github.com/t1m0feevka/lab_reports" target="_blank">Звітний html-документ</a><br/>2. <a href="https://t1m0feevka.github.io/lab_reports/" target="_blank">Жива сторінка html-документа</a><br/>3. <a href="https://github.com/t1m0feevka/dilership" target="_blank">Посилання на WEB-застосунок</a><br/>4. <a href="https://t1m0feevka.github.io/dilership/" target="_blank">Жива сторінка WEB-застосунку</a><br/>5. <a href="https://github.com/t1m0feevka/independed_projects" target="_blank">Самостіна робота</a><br/>6. <a href="https://t1m0feevka.github.io/independed_projects/" target="_blank">Жива сторінка самостійної роботи</a>',
+                    'СТРУКТУРА ДОКУМЕНТА': '!DOCTYPE html: Вказує тип документа (HTML5).<br/> html lang="uk": Встановлює мову сторінки як українську.<br/>head: Метаінформація (кодування, заголовок, підключення стилів).<br/>body: Основний вміст:<br/>header: Логотип.<br/>main:<br/>Привітання, опис автосалону.<br/>Таблиця популярних авто.<br/>Переваги компанії.<br/>Форма для звязку.<br/>footer: Підвал з копірайтом і посиланням.',
+                    'HTML-код ТАБЛИЦІ': '<img src="img/table_code.png" alt="HTML-код таблиці" style="position: absolute; top: 74%; left: 33%"><img src="img/table.png">',
+                    'HTML-код ФОРМИ': '<img src="img/form_code.png" alt="HTML-код форми" style="position: absolute; top: 90%; left: 34%"><img src="img/form.png">',
+                    'HTML-код ЗОБРАЖЕННЯ': '<img src="img/photo_code.png" alt="HTML-код зображення" style="position: absolute; top: 65%; left: 33%"><img src="img/photo.png" alt="HTML-код зображення">',
+                    'ВИСНОВКИ': 'У ході виконання лабораторної роботи були досягнуті ключові цілі: розвинено практичні навички роботи з HTML-документами, включаючи створення і редагування основних елементів, таких як заголовки, абзаци, списки і таблиці. Опановано вставку зображень і налаштування їх відображення, управління розмірами і розташуванням. Розглянуто додавання гіперпосилань для навігації, створення форм для збору даних від користувачів, а також організацію інформації за допомогою маркованих і нумерованих списків. В результаті створено шаблон звітного HTML-документа для відображення результатів усіх лабораторних завдань, що дозволяє структуровано і зрозуміло презентувати отримані дані. Робота допомогла закріпити знання HTML та здобути навички, які будуть корисні для розробки і підтримки веб-додатків.'
                 },
                 2: {
                     'Тема, мета ЛР2, Місце розташування сайту, звіту': 'Тема: КАСКАДНІ ТАБЛИЦІ СТИЛІВ. СЕЛЕКТОРИ .ІДЕНТИФІКАТОРИ. СТИЛЬОВЕ ОФОРМЛЕННЯ ТЕКСТОВИХ ЕЛЕМЕНТІВ В HTML-ДОКУМЕНТАХ.<br/><br/>Мета: придбати практичні навички роботи з селекторами, ідентифікаторами, списками, різноманітними властивостями кольору і фону, зовнішними та внутрішними відступами, плаваючими елементами, оформленням текстових елементів <br/>1. <a href="https://github.com/t1m0feevka/lab_reports" target="_blank">Звітний html-документ</a><br/>2. <a href="https://t1m0feevka.github.io/lab_reports/" target="_blank">Жива сторінка html-документа</a><br/>3. <a href="https://github.com/t1m0feevka/dilership" target="_blank">Посилання на WEB-застосунок</a><br/>4. <a href="https://t1m0feevka.github.io/dilership/" target="_blank">Жива сторінка WEB-застосунку</a><br/>5. <a href="https://github.com/t1m0feevka/independed_projects" target="_blank">Самостіна робота</a><br/>6. <a href="https://t1m0feevka.github.io/independed_projects/" target="_blank">Жива сторінка самостійної роботи</a>',
                     'Способи підключення стилів': 'Вбудовані стилі (Inline Styles):<br/>Використання атрибута style безпосередньо в HTML-елементі.html<br/><br/>Внутрішні стилі (Internal Styles):<br/>Використання тегу style у секції head документа. Це дозволяє визначити стилі для всього документа.<br/><br/>Зовнішні стилі (External Styles):<br/>Використання зовнішнього CSS-файлу, підключеного за допомогою тегу link у секції head. Це найпоширеніший спосіб, оскільки дозволяє повторно використовувати один і той же файл стилів на кількох сторінках.',
-                    'Селектори тегу': '<img src="img/tag_selector1.png" alt="HTML-код селектор тегу" style="position: absolute; top: 41%; left: 31%">',
+                    'Селектори тегу': '<img src="img/tag_selector.png" alt="HTML-код селектор тегу" style="position: absolute; top: 41%; left: 31%">',
                     'Селектори класу': '<img src="img/class_selector.png" alt="HTML-код селектор класу" style="position: absolute; top: 41%; left: 31%">',
                     'Селектори ідентифікаторів': '<img src="img/indent_selector.png" alt="HTML-код селектор індентифікатору" style="position: absolute; top: 41%; left: 31%">',
                     'Інші селектори': '<img src="img/other_selector1.png" alt="HTML-код універсального селектору" style="position: absolute; top: 41%; left: 31%"><img src="img/other_selector2.png" alt="HTML-код селектор атрибуту" style="position: absolute; top: 61%; left: 31%"><img src="img/other_selector3.png" alt="HTML-код селектор сусіда" style="position: absolute; top: 41%; left: 61%"><img src="img/other_selector4.png" alt="HTML-код дочірній селектор" style="position: absolute; top: 61%; left: 61%">',
                     'CSS: Шрифт, Текст, Таблиці, Фон, Контур, Списки, CSS Просунутий': '<img src="img/styles.png" alt="css оформлення">',
                     'Висновки': 'Виконуючи лабораторну роботу з каскадних таблиць стилів (CSS), було досягнуто мети щодо освоєння основних технік роботи з селекторами та ідентифікаторами, а також стильового оформлення елементів HTML-документів. Практика з різними властивостями кольору, фону, відступів та плаваючих елементів дозволила створювати більш структуровані й візуально привабливі веб-сторінки. Це допоможе в подальшій роботі над дизайном сайтів і створенні адаптивних інтерфейсів.'
+                },
+                3: {
+                    'Тема, Мета, Місце розташування сайту, звіту': 'Тема: ВЕРСТКА HTML-ДОКУМЕНТУ. БЛОКОВА ВЕРСТКА.  ВЕРСТКА ЗАСОБАМИ CSS та FLEXBOX.<br/><br/>Мета:<br/>⎯придбати практичні навички роботи  верстки сторінок засобами CSS, верстки на основі плаваючих елементів, з’ясувати переваги та недоліки типів макетів веб-сторінок. <br/>⎯	придбати практичні навички роботи  верстки сторінок засобами CSS та FLEXBOX<br/><br/>1. <a href="https://github.com/t1m0feevka/lab_reports" target="_blank">Звітний html-документ</a><br/>2. <a href="https://t1m0feevka.github.io/lab_reports/" target="_blank">Жива сторінка html-документа</a><br/>3. <a href="https://github.com/t1m0feevka/lab30" target="_blank">Посилання на cайт</a><br/>4. <a href="https://t1m0feevka.github.io/lab30/" target="_blank">Жива сторінка сайту</a><br/>',
+                    'ЗАВДАННЯ 1: Зовнішній вигляд макету. Код макету': '<img src="img/model.png" alt="Модель сайту">',
+                    'ЗАВДАННЯ 2: Фіксована таблична верстка': '<img src="img/fix_table.png" alt="Фіксована таблична верстка">',
+                    'ЗАВДАННЯ 2: Гумова таблична верстка': '<img src="img/rub_table.png" alt="Гумова таблична верстка">',
+                    'ЗАВДАННЯ 2: Фіксована блокова верстка': '<img src="img/fix_block.png" alt="Фіксована блокова верстка">',
+                    'ЗАВДАННЯ 2: Гумова блокова верстка': '<img src="img/rub_block.png" alt="Гумова блокова верстка">',
+                    'ЗАВДАННЯ 3: Скрішот сторінки Flexbox': '<img src="img/site1_java.png" alt="Скрін_1"><img src="img/site2_java.png" alt="Скрін_2">',
+                    'ЗАВДАННЯ 3: HTML-код Flexbox': '<img src="img/html_flexbox.png" alt="HTML-код Flexbox">',
+                    'ЗАВДАННЯ 3: CSS-код Flexbox': '<img src="img/css_flexbox.png" alt="CSS-код Flexbox">',
+                    'Висновки': 'У процесі роботи над версткою веб-додатків були розглянуті переваги та недоліки використання таблиць і блоків (плаваючих блоків).<br/><br/>Таблиці:<br/>Переваги:<br/>-Легкість структуризації даних.<br/>-Простота реалізації для малих обсягів інформації.<br/>-Контроль вирівнювання та пропорцій.<br/><br/>Недоліки:<br/>-Обмежена адаптивність для мобільних пристроїв.<br/>-Складність управління стилями.<br/>-Погана семантика, що впливає на SEO та доступність.<br/><br/>Блоки (плаваючі блоки):<br/>Переваги:<br/>-Вища гнучкість та адаптивність макету<br/>-Легкість у використанні CSS для стилізації.<br/>-Краще структуроване вміст.<br/><br/>Недоліки:<br/>-Потребують складніших знань CSS.<br/>-Можливі проблеми з макетом без належного контролю.<br/><br/>У рамках теми "Верстка HTML-документу. Блокова верстка. Верстка засобами CSS та Flexbox" були досягнуті поставлені цілі щодо набуття практичних навичок у верстці веб-сторінок. Засоби CSS та Flexbox продемонстрували свою ефективність у створенні адаптивних та естетично привабливих макетів. Flexbox, зокрема, забезпечує вищу гнучкість у розміщенні елементів, що є важливим для сучасних веб-додатків. Під час роботи були вивчені різні методи верстки, включаючи використання плаваючих елементів, що дозволяє створювати динамічні макети.У результаті дослідження переваг і недоліків різних типів макетів стало зрозуміло, що блокова верстка є більш адаптивною та семантичною, ніж таблиці. Використання CSS і Flexbox сприяє створенню більш структурованих і доступних веб-сторінок, що відповідають сучасним вимогам веб-розробки. Ці знання та навички будуть корисні для подальшої роботи у сфері веб-дизайну та розробки.',
                 }
             };
 
@@ -93,7 +112,7 @@
                     <button onclick="showDetail('ВИСНОВКИ')">ВИСНОВКИ</button>
                 </div>
                 <div id="buttons-lab2" style="display: none;">
-                    <button onclick="showDetail('Тема, мета ЛР2, Місце розташування сайту, звіту')">Тема, мета ЛР2, Місце розташування сайту, звіту</button>
+                   <button onclick="showDetail('Тема, мета ЛР2, Місце розташування сайту, звіту')">Тема, мета ЛР2, Місце розташування сайту, звіту</button>
                     <button onclick="showDetail('Способи підключення стилів')">Способи підключення стилів</button>
                     <button onclick="showDetail('Селектори тегу')">Селектори тегу</button>
                     <button onclick="showDetail('Селектори класу')">Селектори класу</button>
@@ -102,6 +121,18 @@
                     <button onclick="showDetail('CSS: Шрифт, Текст, Таблиці, Фон, Контур, Списки, CSS Просунутий')">CSS: Шрифт, Текст, Таблиці, Фон, Контур, Списки, CSS Просунутий</button>
                     <button onclick="showDetail('Висновки')">Висновки</button>
                 </div>
+                <div id="buttons-lab3" style="display: none;">
+                    <button onclick="showDetail('Тема, Мета, Місце розташування сайту, звіту')">Тема, Мета, Місце розташування сайту, звіту</button>
+                     <button onclick="showDetail('ЗАВДАННЯ 1: Зовнішній вигляд макету. Код макету')">ЗАВДАННЯ 1: Зовнішній вигляд макету. Код макету</button>
+                     <button onclick="showDetail('ЗАВДАННЯ 2: Фіксована таблична верстка')">ЗАВДАННЯ 2: Фіксована таблична верстка</button>
+                     <button onclick="showDetail('ЗАВДАННЯ 2: Гумова таблична верстка')">ЗАВДАННЯ 2: Гумова таблична верстка</button>
+                     <button onclick="showDetail('ЗАВДАННЯ 2: Фіксована блокова верстка')">ЗАВДАННЯ 2: Фіксована блокова верстка</button>
+                     <button onclick="showDetail('ЗАВДАННЯ 2: Гумова блокова верстка')">ЗАВДАННЯ 2: Гумова блокова верстка</button>
+                     <button onclick="showDetail('ЗАВДАННЯ 3: Скрішот сторінки Flexbox')">ЗАВДАННЯ 3: Скрішот сторінки Flexbox</button>
+                     <button onclick="showDetail('ЗАВДАННЯ 3: HTML-код Flexbox')">ЗАВДАННЯ 3: HTML-код Flexbox</button>
+                     <button onclick="showDetail('ЗАВДАННЯ 3: CSS-код Flexbox')">ЗАВДАННЯ 3: CSS-код Flexbox</button>
+                     <button onclick="showDetail('Висновки')">Висновки</button>
+                 </div>
             </div>
 
             <div class="lab-content">
