--- a/index.html
+++ b/index.html
@@ -17,20 +17,12 @@
             const buttonsSection1 = document.getElementById('buttons-lab1');
             const buttonsSection2 = document.getElementById('buttons-lab2');
             const buttonsSection3 = document.getElementById('buttons-lab3');
+            const buttonsSection4 = document.getElementById('buttons-lab4');
 
-            if (labNumber === 1) {
-                buttonsSection1.style.display = 'block'; 
-                buttonsSection2.style.display = 'none';  
-                buttonsSection3.style.display = 'none'; 
-            } else if (labNumber === 2) {
-                buttonsSection1.style.display = 'none'; 
-                buttonsSection2.style.display = 'block'; 
-                buttonsSection3.style.display = 'none'; 
-            } else if (labNumber === 3) {
-                buttonsSection1.style.display = 'none'; 
-                buttonsSection2.style.display = 'none';  
-                buttonsSection3.style.display = 'block'; 
-            }
+            buttonsSection1.style.display = labNumber === 1 ? 'block' : 'none';
+            buttonsSection2.style.display = labNumber === 2 ? 'block' : 'none';
+            buttonsSection3.style.display = labNumber === 3 ? 'block' : 'none';
+            buttonsSection4.style.display = labNumber === 4 ? 'block' : 'none';
         }
 
         function showDetail(detailType) {
@@ -65,6 +57,14 @@
                     'ЗАВДАННЯ 3: HTML-код Flexbox': '<img src="img/html_flexbox.png" alt="HTML-код Flexbox">',
                     'ЗАВДАННЯ 3: CSS-код Flexbox': '<img src="img/css_flexbox.png" alt="CSS-код Flexbox">',
                     'Висновки': 'У процесі роботи над версткою веб-додатків були розглянуті переваги та недоліки використання таблиць і блоків (плаваючих блоків).<br/><br/>Таблиці:<br/>Переваги:<br/>-Легкість структуризації даних.<br/>-Простота реалізації для малих обсягів інформації.<br/>-Контроль вирівнювання та пропорцій.<br/><br/>Недоліки:<br/>-Обмежена адаптивність для мобільних пристроїв.<br/>-Складність управління стилями.<br/>-Погана семантика, що впливає на SEO та доступність.<br/><br/>Блоки (плаваючі блоки):<br/>Переваги:<br/>-Вища гнучкість та адаптивність макету<br/>-Легкість у використанні CSS для стилізації.<br/>-Краще структуроване вміст.<br/><br/>Недоліки:<br/>-Потребують складніших знань CSS.<br/>-Можливі проблеми з макетом без належного контролю.<br/><br/>У рамках теми "Верстка HTML-документу. Блокова верстка. Верстка засобами CSS та Flexbox" були досягнуті поставлені цілі щодо набуття практичних навичок у верстці веб-сторінок. Засоби CSS та Flexbox продемонстрували свою ефективність у створенні адаптивних та естетично привабливих макетів. Flexbox, зокрема, забезпечує вищу гнучкість у розміщенні елементів, що є важливим для сучасних веб-додатків. Під час роботи були вивчені різні методи верстки, включаючи використання плаваючих елементів, що дозволяє створювати динамічні макети.У результаті дослідження переваг і недоліків різних типів макетів стало зрозуміло, що блокова верстка є більш адаптивною та семантичною, ніж таблиці. Використання CSS і Flexbox сприяє створенню більш структурованих і доступних веб-сторінок, що відповідають сучасним вимогам веб-розробки. Ці знання та навички будуть корисні для подальшої роботи у сфері веб-дизайну та розробки.',
+                },
+
+                4: {
+                    'Тема, Мета, Місце розташування сайту, звіту': 'Тема:  АДАПТИВНА ВЕРСТКА. МЕДІА-ЗАПИТИ. МЕТАТЕГ VIEWPORT. СТРАТЕГІЯ MOBILE FIRST.</br></br>Мета: Адаптивна верстка. Медіа-запити. Медіа-типи. Медіа-функції.Метатег viewport. Інструменти розробника. Стратегія Mobile First.</br></br>1. <a href="https://github.com/t1m0feevka/lab_reports" target="_blank">Звітний html-документ</a><br/>2. <a href="https://t1m0feevka.github.io/lab_reports/" target="_blank">Жива сторінка html-документа</a><br/>3. <a href="https://github.com/t1m0feevka/dilership" target="_blank">Посилання на WEB-застосунок</a><br/>4. <a href="https://t1m0feevka.github.io/dilership/" target="_blank">Жива сторінка WEB-застосунку</a><br/>5. <a href="https://github.com/t1m0feevka/independed_projects" target="_blank">Самостіна робота</a><br/>6. <a href="https://t1m0feevka.github.io/independed_projects/" target="_blank">Жива сторінка самостійної роботи</a>',
+                    'Десктопна версія': '<img src="img/desk_code.png" alt="Десктопна версія код"><img src="img/desk.png" alt="Десктопна версія">',
+                    'Планшетна версія': '<img src="img/tab_code.png" alt="Планшетна версія код"><img src="img/tab.png" alt="Планшетна версія">',
+                    'Мобільна версія': '<img src="img/phone_code.png" alt="Мобільна версія код"><img src="img/phone.png" alt="Мобільна версія">',
+                    'Висновки': '1. Десктопна версія</br>Для десктопних пристроїв (ширина більше 1025 пікселів) стилі налаштовуються для оптимального використання простору на великих екранах. Наприклад, зображення в хедері займає ширину 700px, а секції мають максимальну ширину 1400px</br></br>2. Планшетна версія</br>Для планшетів (ширина від 768 до 1024 пікселів) стилі адаптуються до середніх розмірів екранів. Зображення зменшуються до 500px, а секції мають максимальну ширину 800px. Це дозволяє ефективно використовувати простір без надмірного стиснення контенту</br></br>3. Мобільна версія</br>Для мобільних пристроїв (ширина менше 768 пікселів) стилі ще більше адаптуються: зображення зменшуються до 300px, а шрифти та елементи форм також стискаються для кращої зручності. Важливо, щоб всі елементи залишалися читабельними і легкими для взаємодії</br></br>Висновок:</br>Лабораторна робота над темою адаптивної верстки підтвердила важливість використання медіа-запитів та стратегій, які сприяють створенню зручних та функціональних веб-сторінок. Вона показала, що правильне налаштування стилів і використання інструментів розробника дозволяє досягти високого рівня адаптивності, що відповідає сучасним вимогам користувачів до веб-досвіду. Це знання є важливим для подальшої роботи у сфері веб-розробки, оскільки адаптивний дизайн стає все більш необхідним у зв`язку з розширенням використання мобільних пристроїв.'
                 }
             };
 
@@ -133,6 +133,13 @@
                      <button onclick="showDetail('ЗАВДАННЯ 3: CSS-код Flexbox')">ЗАВДАННЯ 3: CSS-код Flexbox</button>
                      <button onclick="showDetail('Висновки')">Висновки</button>
                  </div>
+                 <div id="buttons-lab4" style="display: none;">
+                    <button onclick="showDetail('Тема, Мета, Місце розташування сайту, звіту')">Тема, Мета, Місце розташування сайту, звіту</button>
+                    <button onclick="showDetail('Десктопна версія')">Десктопна версія</button>
+                    <button onclick="showDetail('Планшетна версія')">Планшетна версія</button>
+                    <button onclick="showDetail('Мобільна версія')">Мобільна версія</button>
+                    <button onclick="showDetail('Висновки')">Висновки</button>
+                </div>
             </div>
 
             <div class="lab-content">
